Fixed title overlap with NavBar

--- a/src/pages/components/components-style.css
+++ b/src/pages/components/components-style.css
@@ -1,7 +1,7 @@
 /* For navigation */
 
 nav {
-  z-index: 2;
+  z-index: 3;
   top: 0;
   position: sticky;
   display: flex;
